# auristeg-android

./: .gitignore  README.md  README.ru.md  build-android.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/auristeg/android/: MainActivity.java  RustBridge.java
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
rust/: Cargo.toml
rust/src/: lib.rs
