[package]
name = "auristeg-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "auristeg_bridge"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp"] }
auristeg-core = { git = "https://github.com/muwrec/auristeg" }
